# AI-From_Scratch_To_Scale

./: .editorconfig  .flake8  .flake8.disabled  .flake8_backup  .flake8_new  .gitignore  .markdownlint.json  .pylintrc  ACTION_PLAN.md  ADALINE_Implementation_Todo.md  Enhanced_VS_Code_Configuration.md  INFRASTRUCTURE_COMPLETE.md  PERCEPTRON_IMPLEMENTATION_PLAN.md  TEST_RESULTS_SUMMARY.md  VS_Code_Setup_Guide.md  __init__.py  ai-from-scratch-to-scale.code-workspace  debug_wandb.py  demo_unified_training.py  fix_md013.ps1  fix_md040.ps1  fix_remaining.ps1  mypy.ini  package.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  setup.py  test_perceptron_approaches.py
data_utils/: __init__.py  base_datasets.py  cache.py  datasets.py  loaders.py  metadata.py  organization.py  setup.py  synthetic.py
docs/: ADALINE_Implementation_Roadmap.md  AI_Development_Guide.md  CI_CD_Guide.md  Codebase Architecture & Strategy.md  Coding Standards Guide for 'AI From Scratch to Scale' (1).md  Development_Checklist.md  Development_FAQ.md  Implementation_Patterns_Guide.md  Linting_Automation_Summary.md  Markdown_Linting_Guide.md  Quick_Reference.md  README.md  Setup_Path_Implementation_Summary.md  Template_Alignment_Recommendations.md
docs/strategy/: Dataset_Strategy.md  Notebook_Strategy.md  Project_Charter.md  Testing_Strategy.md  Visualization_Ideas.md
docs/technical/: Codebase_Architecture.md  Coding_Standards.md  Wandb_Integration_Plan.md
docs/templates/: .flake8  .pylintrc  README_template.md  config.py  constants.py  evaluate_template.py  model.py  requirements.txt  setup_path.py  test_model_template.py  train.py  train_new.py  visual_analysis_notebook.py  wandb_config_example.py  wandb_sweep.yaml
docs/validation/: README.md  quick_validate.py  validate_project.py
docs/visualization/: Implementation_Guide.md  Playbooks.md  Quick_Reference.md
engine/: __init__.py  base.py  evaluator.py  setup.py  trainer.py
models/01_perceptron/: .pylintrc  README.md  __init__.py  mypy.ini  requirements.txt  setup_path.py  test_imports.py  validate_environment.py
models/02_MLP/: README.md  requirements.txt
models/02_adaline/: DATASET_IMPLEMENTATION_SUMMARY.md  README.md  RESULTS_SUMMARY.md  debug_data.py  requirements.txt  setup_path.py  test_visualization.py
models/03_MLP/: README.md  setup_path.py  working_train.py
plotting/: __init__.py  comparison_plots.py  model_analysis.py  setup.py  training_plots.py  utils.py
scripts/: advanced_lint_fix.py  autofix_linting.py  check.ps1  fix_cache_issues.py  fix_markdown.ps1  fix_single_file.py  format.ps1  lint.ps1  lint_modern.py  quick_lint_fix.py  setup_pre_commit.ps1
tests/: conftest.py  run_tests.py  test_isolation.py  test_isolation_example.py  test_plotting_model_analysis.py
tests/integration/: test_adaline_engine_integration.py  test_perceptron_evaluate_script.py  test_perceptron_integration.py  test_perceptron_train_script.py  test_perceptron_training.py
tests/smoke/: test_perceptron_scripts.py  test_perceptron_smoke.py
tests/unit/: test_data_utils_base_datasets.py  (+4 more)
utils/: __init__.py  device.py  exceptions.py  general.py  logger.py  logging.py  seeds.py  setup.py
(+42 files in other folders)
